--- a/index.html
+++ b/index.html
@@ -21,36 +21,38 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"
-          >Web<span class="header-web">Studio</span>
-        </a>
-        <ul class="heder-menu-list">
-          <li class="heder-menu-item">
-            <a class="header-href" href="./index.html">Studio</a>
-          </li>
-          <li class="heder-menu-item">
-            <a class="header-href" href="">Portfolio</a>
-          </li>
-          <li class="heder-menu-item">
-            <a class="header-href" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="heder-contacts">
-        <ul class="heder-contacts-list">
-          <li class="header-cotacts-items">
-            <a class="hedear-menu-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-cotacts-items">
-            <a class="hedear-menu-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a class="header-logo" href="./index.html"
+            >Web<span class="header-web">Studio</span>
+          </a>
+          <ul class="heder-menu-list">
+            <li class="heder-menu-item">
+              <a class="header-href" href="./index.html">Studio</a>
+            </li>
+            <li class="heder-menu-item">
+              <a class="header-href" href="">Portfolio</a>
+            </li>
+            <li class="heder-menu-item">
+              <a class="header-href" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="heder-contacts">
+          <ul class="heder-contacts-list">
+            <li class="header-cotacts-items">
+              <a class="hedear-menu-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-cotacts-items">
+              <a class="hedear-menu-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="secnion-hero">
