--- a/index.html
+++ b/index.html
@@ -56,90 +56,102 @@
     </header>
     <main>
       <section class="secnion-hero">
-        <h1 class="hero">Effective Solutions for Your Business</h1>
-        <button class="hero-order-btn" type="button">Order Service</button>
+        <div class="container">
+          <div class="container-title">
+            <h1 class="hero">Effective Solutions for Your Business</h1>
+            <div class="container-btn">
+              <button class="hero-order-btn" type="button">
+                Order Service
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="section-skills">
-        <h2 class="skills">Advantages</h2>
-        <ul class="skills-list">
-          <li class="skills-item">
-            <h3 class="skills-titel">Strategy</h3>
-            <p class="skills-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="skills-item">
-            <h3 class="skills-titel">Punctuality</h3>
-            <p class="skills-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="skills-item">
-            <h3 class="skills-titel">Diligence</h3>
-            <p class="skills-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="skills-item">
-            <h3 class="skills-titel">Technologies</h3>
-            <p class="skills-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="skills">Advantages</h2>
+          <ul class="skills-list">
+            <li class="skills-item">
+              <h3 class="skills-titel">Strategy</h3>
+              <p class="skills-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-titel">Punctuality</h3>
+              <p class="skills-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-titel">Diligence</h3>
+              <p class="skills-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-titel">Technologies</h3>
+              <p class="skills-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-tem">
-        <h2 class="team">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-items">
-            <img
-              class="team-img"
-              src="./images/team/MarkGuerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-items">
-            <img
-              class="team-img"
-              src="./images/team/TomFord.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-items">
-            <img
-              class="team-img"
-              src="./images/team/CamilaGarcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-items">
-            <img
-              class="team-img"
-              src="./images/team/DanielWilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-items">
+              <img
+                class="team-img"
+                src="./images/team/MarkGuerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-items">
+              <img
+                class="team-img"
+                src="./images/team/TomFord.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-items">
+              <img
+                class="team-img"
+                src="./images/team/CamilaGarcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-items">
+              <img
+                class="team-img"
+                src="./images/team/DanielWilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-portfolio">
         <h2 class="portfolio">Our Portfolio</h2>
