--- a/index.html
+++ b/index.html
@@ -154,75 +154,77 @@
         </div>
       </section>
       <section class="section-portfolio">
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/app.jpg"
-              alt="app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/mobileQR.jpg"
-              alt="mobil-pay"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/notebook.jpg"
-              alt="pk-tel"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/cardrive.jpg"
-              alt="cardrive"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/illustration.jpg"
-              alt="mobil-illustration"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-list-item">
-            <img
-              class="portfolio-img"
-              src="./images/portfolio/girl.jpg"
-              alt="girl"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/app.jpg"
+                alt="app"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/mobileQR.jpg"
+                alt="mobil-pay"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/notebook.jpg"
+                alt="pk-tel"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/cardrive.jpg"
+                alt="cardrive"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/illustration.jpg"
+                alt="mobil-illustration"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                class="portfolio-img"
+                src="./images/portfolio/girl.jpg"
+                alt="girl"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
