--- a/index.html
+++ b/index.html
@@ -57,15 +57,10 @@
     </header>
     <main>
       <section class="secnion-hero">
-        <div class="container">
-          <div class="container-title">
-            <h1 class="hero">Effective Solutions for Your Business</h1>
-            <div class="container-btn">
-              <button class="hero-order-btn" type="button">
-                Order Service
-              </button>
-            </div>
-          </div>
+          <h1 class="hero">Effective Solutions for Your Business</h1>
+          
+            <button class="hero-order-btn" type="button">Order Service</button>
+          
         </div>
       </section>
       <section class="section-skills">
@@ -115,8 +110,10 @@
                 width="264"
                 height="260"
               />
+              <div class="container-team">
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-text">Product Designer</p>
+            </div>
             </li>
             <li class="team-items">
               <img
@@ -126,8 +123,9 @@
                 width="264"
                 height="260"
               />
+              <div class="container-team">
               <h3 class="team-name">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <p class="team-text">Frontend Developer</p></div>
             </li>
             <li class="team-items">
               <img
@@ -137,8 +135,10 @@
                 width="264"
                 height="260"
               />
+              <div class="container-team">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-items">
               <img
@@ -148,8 +148,10 @@
                 width="264"
                 height="260"
               />
+              <div class="container-team">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -166,8 +168,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Banking App</h3>
               <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -177,8 +181,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -188,8 +194,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Meditation App</h3>
               <p class="portfolio-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -199,8 +207,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -210,8 +220,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -221,8 +233,10 @@
                 width="360"
                 height="300"
               />
+              <div class="container-portfolio">
               <h3 class="portfolio-title">Online Courses</h3>
               <p class="portfolio-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
