--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
     </header>
     <main>
       <section class="secnion-hero">
+        <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
-          
-            <button class="hero-order-btn" type="button">Order Service</button>
-          
+
+          <button class="hero-order-btn" type="button">Order Service</button>
         </div>
       </section>
       <section class="section-skills">
         <div class="container">
-          <h2 class="skills">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="skills-list">
             <li class="skills-item">
               <h3 class="skills-titel">Strategy</h3>
@@ -111,9 +111,9 @@
                 height="260"
               />
               <div class="container-team">
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
-            </div>
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-items">
               <img
@@ -124,8 +124,9 @@
                 height="260"
               />
               <div class="container-team">
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p></div>
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-items">
               <img
@@ -136,8 +137,8 @@
                 height="260"
               />
               <div class="container-team">
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
               </div>
             </li>
             <li class="team-items">
@@ -149,8 +150,8 @@
                 height="260"
               />
               <div class="container-team">
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -169,8 +170,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Banking App</h3>
-              <p class="portfolio-text">App</p>
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -182,8 +183,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -195,8 +196,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -208,8 +209,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -221,8 +222,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
@@ -234,8 +235,8 @@
                 height="300"
               />
               <div class="container-portfolio">
-              <h3 class="portfolio-title">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
               </div>
             </li>
           </ul>
