--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
         </div>
       </section>
     </main>
+    <!------------------footer------------>
     <footer class="footer">
       <div class="container">
         <div class="container-footer-wrapper">
