--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
                     <use
-                      href="./images/sprite-1/symbol-defs.svg#icon-antenna-1-1"
+                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-antenna-1-1"
                     ></use>
                   </svg>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
                     <use
-                      href="./images/sprite-1/symbol-defs.svg#icon-clock-1-1"
+                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-clock-1-1"
                     ></use>
                   </svg>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
                     <use
-                      href="./images/sprite-1/symbol-defs.svg#icon-diagram-1-1"
+                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-diagram-1-1"
                     ></use>
                   </svg>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
                     <use
-                      href="./images/sprite-1/symbol-defs.svg#icon-astronaut-1-1"
+                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-astronaut-1-1"
                     ></use>
                   </svg>
                 </div>
@@ -199,7 +199,7 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-instagram-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
                       ></use>
                     </svg>
                   </a>
@@ -207,15 +207,8 @@
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter-p"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a class="icon-href" href="">
-                    <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-facebook-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
                       ></use>
                     </svg>
                   </a>
@@ -224,7 +217,16 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-linkedin-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a class="icon-href" href="">
+                    <svg class="icon" width="16" height="16">
+                      <use
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
                       ></use>
                     </svg>
                   </a>
@@ -248,7 +250,7 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-instagram-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
                       ></use>
                     </svg>
                   </a>
@@ -256,15 +258,8 @@
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter-p"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a class="icon-href" href="">
-                    <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-facebook-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
                       ></use>
                     </svg>
                   </a>
@@ -273,7 +268,16 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-linkedin-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a class="icon-href" href="">
+                    <svg class="icon" width="16" height="16">
+                      <use
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
                       ></use>
                     </svg>
                   </a>
@@ -297,7 +301,7 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-instagram-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
                       ></use>
                     </svg>
                   </a>
@@ -305,15 +309,8 @@
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter-p"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a class="icon-href" href="">
-                    <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-facebook-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
                       ></use>
                     </svg>
                   </a>
@@ -322,7 +319,16 @@
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-linkedin-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item">
+                  <a class="icon-href" href="">
+                    <svg class="icon" width="16" height="16">
+                      <use
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
                       ></use>
                     </svg>
                   </a>
@@ -484,7 +490,7 @@
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-instagram-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
                       ></use>
                     </svg>
                   </a>
@@ -492,15 +498,8 @@
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href=""
                     ><svg class="icon-footer" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter-p"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item-footer">
-                  <a class="icon-href-footer" href="">
-                    <svg class="icon-footer" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-facebook-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
                       ></use>
                     </svg>
                   </a>
@@ -509,7 +508,16 @@
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
                       <use
-                        href="./images/symbol-defs.svg#icon-linkedin-p"
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
+                      ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="icon-item-footer">
+                  <a class="icon-href-footer" href="">
+                    <svg class="icon-footer" width="16" height="16">
+                      <use
+                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
                       ></use>
                     </svg>
                   </a>
