--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use
-                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-antenna-1-1"
-                    ></use>
+                    <use href="./images/symbol-defs.svg#icon-antenna"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Strategy</h3>
@@ -86,9 +84,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use
-                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-clock-1-1"
-                    ></use>
+                    <use href="./images/symbol-defs.svg#icon-clock"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Punctuality</h3>
@@ -100,9 +96,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use
-                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-diagram-1-1"
-                    ></use>
+                    <use href="./images/symbol-defs.svg#icon-diagram"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Diligence</h3>
@@ -114,9 +108,7 @@
               <li class="skills-item">
                 <div class="container-icon-skills">
                   <svg class="icon-skills" widht="64" heigth="64">
-                    <use
-                      href="./images/SVG-sprite icons.svg/icon-skills.svg#icon-astronaut-1-1"
-                    ></use>
+                    <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                   </svg>
                 </div>
                 <h3 class="skills-titel">Technologies</h3>
@@ -149,34 +141,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/symbol-defs.svg#icon-instagram-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-twitter-p"></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/symbol-defs.svg#icon-facebook-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/symbol-defs.svg#icon-linkedin-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -198,36 +184,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -249,36 +227,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -300,36 +270,28 @@
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href=""
                     ><svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item">
                   <a class="icon-href" href="">
                     <svg class="icon" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -489,36 +451,28 @@
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-instagram-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href=""
                     ><svg class="icon-footer" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-twitter-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-facebook-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
                     <svg class="icon-footer" width="16" height="16">
-                      <use
-                        href="./images/SVG-sprite icons.svg/svg.social.svg#icon-linkedin-p"
-                      ></use>
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
