--- a/index.html
+++ b/index.html
@@ -66,59 +66,57 @@
       </section>
       <section class="section-skills">
         <div class="container">
-          <div class="container-skills">
-            <h2 class="visually-hidden">Advantages</h2>
-            <ul class="skills-list">
-              <li class="skills-item">
-                <div class="container-icon-skills">
-                  <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/icons.svg#icon-antenna"></use>
-                  </svg>
-                </div>
-                <h3 class="skills-titel">Strategy</h3>
-                <p class="skills-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="skills-item">
-                <div class="container-icon-skills">
-                  <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/icons.svg#icon-clock"></use>
-                  </svg>
-                </div>
-                <h3 class="skills-titel">Punctuality</h3>
-                <p class="skills-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="skills-item">
-                <div class="container-icon-skills">
-                  <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/icons.svg#icon-diagram"></use>
-                  </svg>
-                </div>
-                <h3 class="skills-titel">Diligence</h3>
-                <p class="skills-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="skills-item">
-                <div class="container-icon-skills">
-                  <svg class="icon-skills" widht="64" heigth="64">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
-                  </svg>
-                </div>
-                <h3 class="skills-titel">Technologies</h3>
-                <p class="skills-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="skills-list">
+            <li class="skills-item">
+              <div class="container-icon-skills">
+                <svg class="icon-skills" widht="64" heigth="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <h3 class="skills-titel">Strategy</h3>
+              <p class="skills-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="skills-item">
+              <div class="container-icon-skills">
+                <svg class="icon-skills" widht="64" heigth="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <h3 class="skills-titel">Punctuality</h3>
+              <p class="skills-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="skills-item">
+              <div class="container-icon-skills">
+                <svg class="icon-skills" widht="64" heigth="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <h3 class="skills-titel">Diligence</h3>
+              <p class="skills-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="skills-item">
+              <div class="container-icon-skills">
+                <svg class="icon-skills" widht="64" heigth="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <h3 class="skills-titel">Technologies</h3>
+              <p class="skills-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section-tem">
@@ -444,7 +442,7 @@
 
           <div class="footer-container-icon">
             <div class="container-title-footer">
-              <h3 class="footer-title">Social media</h3>
+              <p class="footer-title">Social media</p>
             </div>
             <div>
               <ul class="icon-list-footer">
