--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <ul class="skills-list">
             <li class="skills-item">
               <div class="container-icon-skills">
-                <svg class="icon-skills" widht="64" heigth="64">
+                <svg class="icon-skills" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -82,7 +82,7 @@
             </li>
             <li class="skills-item">
               <div class="container-icon-skills">
-                <svg class="icon-skills" widht="64" heigth="64">
+                <svg class="icon-skills" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
             </li>
             <li class="skills-item">
               <div class="container-icon-skills">
-                <svg class="icon-skills" widht="64" heigth="64">
+                <svg class="icon-skills" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -106,7 +106,7 @@
             </li>
             <li class="skills-item">
               <div class="container-icon-skills">
-                <svg class="icon-skills" widht="64" heigth="64">
+                <svg class="icon-skills" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
