--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-list-item first">
+            <li class="portfolio-list-item">
               <div class="container-wrapper-portfolio">
                 <img
                   class="portfolio-img"
