--- a/index.html
+++ b/index.html
@@ -443,37 +443,37 @@
               digital marketing & growth solutions.
             </p>
           </div>
-
-          <div class="footer-container-icon">
+          <div class="conteiner-icon-p">
             <div class="container-title-footer">
               <p class="footer-title">Social media</p>
             </div>
-            <div>
+
+            <div class="footer-container-icon">
               <ul class="icon-list-footer">
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
-                    <svg class="icon-footer" width="16" height="16">
+                    <svg class="icon-footer" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href=""
-                    ><svg class="icon-footer" width="16" height="16">
+                    ><svg class="icon-footer" width="24" height="24">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
-                    <svg class="icon-footer" width="16" height="16">
+                    <svg class="icon-footer" width="24" height="24">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="icon-item-footer">
                   <a class="icon-href-footer" href="">
-                    <svg class="icon-footer" width="16" height="16">
+                    <svg class="icon-footer" width="24" height="24">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
